--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ html {
 
 .split-layout main section {
   position: relative;
-  width: calc(100% - 3em);
+  width: 100%;
   padding: 1em 2em;
 }
 
@@ -97,20 +97,28 @@ h1 {
 }
 
 p {
-  max-width: 600px;
-  line-height: 1.6em;
+  max-width: 520px;
+  line-height: 1.5em;
   font-size: 1.1em;
   color: lightgray;
 }
 
+.bubble-wrapper {
+  text-align: right;
+}
+
 p.bubble {
+  max-width: 650px;
   display: inline-block;
   background: rgb(54, 54, 69);
+  background: #0077ffbc;
+  /* background: #006effb6; */
+  color: white;
 
   padding: 0.8em 1.25em;
-  border-radius: 1em 1em 1em 0;
+  border-radius: 1em 1em 0 1em;
 
-  margin-bottom: 0.5em;
+  margin-bottom: 2em;
 }
 
 p + p {
@@ -164,7 +172,7 @@ pre code {
   font-size: 1.1em;
   color: lightsteelblue;
   font-family: 'Andale Mono', AndaleMono, monospace;
-  line-height: 1.6em;
+  line-height: 1.5em;
 }
 
 ul {
