--- a/src/styles.css
+++ b/src/styles.css
@@ -19,23 +19,23 @@ body {
   color: #fff;
   font-weight: 400;
   line-height: 1.5;
-  font: 18px 'Inter', system-ui, sans-serif;
+  font: 18px "Inter", system-ui, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
 #root {
   position: relative;
-  height: 100vh;
+  /* height: 100vh; */
   overflow: auto;
 }
 
-@import url('https://rsms.me/inter/inter.css');
+@import url("https://rsms.me/inter/inter.css");
 html {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 @supports (font-variation-settings: normal) {
   html {
-    font-family: 'Inter var', sans-serif;
+    font-family: "Inter var", sans-serif;
   }
 }
 
@@ -59,9 +59,6 @@ html {
 }
 
 .split-layout aside {
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
   flex: 1 1 50%;
   width: 100%;
   max-width: 50%;
@@ -171,7 +168,7 @@ pre {
 pre code {
   font-size: 1.1em;
   color: lightsteelblue;
-  font-family: 'Andale Mono', AndaleMono, monospace;
+  font-family: "Andale Mono", AndaleMono, monospace;
   line-height: 1.5em;
 }
 
